<resources>
    <string name="app_name">FACE_RECOGNITION_BASED_ATTENDANCE_APP</string>
    <string name="please_enter_your_credentials_to_sign_in">Please enter your credentials to Sign In your account</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="please_enter_your_credentials_to_sign_up_your_account">Please enter your credentials to Sign up your account</string>
    <string name="todo">TODO</string>
    <string name="user_name">Enter User name</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="passwors">Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_user_name_hint">Enter User name/Mail-id</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="mail">Enter your mail-id</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="scan">Scan</string>
    <string name="total">Total Students:</string>
    <string name="_64">64</string>
    <string name="students_present">0</string>
    <string name="students_Present">Students Present :</string>
    <string name="face_recognition_based_attendance_system">FACE RECOGNITION BASED ATTENDANCE SYSTEM</string>
    <string name="timer">---</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>